transaction & librarian CRUD done